Added new pages and highcharts

--- a/client/MainLayout.html
+++ b/client/MainLayout.html
@@ -2,12 +2,12 @@
 
     <header>
         <nav>
-            <i class="fa fa-beer medium"></i> <span class="logoTitle">Kallisco Brewery</span>
+            <i class="fa fa-beer medium"></i> <span class="logoTitle">R/J's Brewery page...</span>
             <a href="/a" class="pull-right" title="Sign in"><i class="fa fa-sign-in medium"></i></a>
         </nav>
     </header>
     <div class="container section1">
-        <h1>Welcome to Meteor!</h1>
+        <h1>Welcome to R/J's</h1>
 
         {{> hello}}
     </div>
