--- a/client/brewhouse.html
+++ b/client/brewhouse.html
@@ -3,7 +3,7 @@
         {{> AdminNavigation}}
         <div class="container full-wh main-content" style="float: right;">
             <h1>Brewhouse management</h1>
-            <p>Det var da fint her</p>
+            <p>Alle data rundt bryggeriet legges inn her</p>
         </div>
     </div>
 </template>
