--- a/client/fermentables.html
+++ b/client/fermentables.html
@@ -1,8 +1,8 @@
-<template name="user">
+<template name="fermentables">
     <div class="full-wh">
         {{> AdminNavigation}}
         <div class="container full-wh main-content" style="float: right;">
-            <h1>User page</h1>
+            <h1>Fermentables</h1>
             <p> </p>
         </div>
     </div>
