--- a/client/index.html
+++ b/client/index.html
@@ -12,4 +12,6 @@
 <template name="hello">
   <button>Click Me</button>
   <p>You've pressed the button {{counter}} times.</p>
+  <p> Dette er bare en info/start-side </p>
 </template>
+
