--- a/client/inventory.html
+++ b/client/inventory.html
@@ -1,9 +1,9 @@
-<template name="user">
+<template name="inventory">
     <div class="full-wh">
         {{> AdminNavigation}}
         <div class="container full-wh main-content" style="float: right;">
-            <h1>User page</h1>
-            <p> </p>
+            <h1>Inventory list</h1>
+            <p>Keep track of brewhouse inventory</p>
         </div>
     </div>
 </template>
