--- a/client/recipe.html
+++ b/client/recipe.html
@@ -3,7 +3,7 @@
         {{> AdminNavigation}}
         <div class="container full-wh main-content" style="float: right;">
             <h1>Recipe management page</h1>
-            <p>Det var da fint her</p>
+            <p>Here you can edit and add new recepies.</p>
         </div>
     </div>
 </template>
