--- a/client/settings.html
+++ b/client/settings.html
@@ -1,9 +1,9 @@
-<template name="user">
+<template name="settings">
     <div class="full-wh">
         {{> AdminNavigation}}
         <div class="container full-wh main-content" style="float: right;">
-            <h1>User page</h1>
-            <p> </p>
+            <h1>Settings page</h1>
+            <p>Web site settings</p>
         </div>
     </div>
 </template>
