--- a/client/AdminNavigation.html
+++ b/client/AdminNavigation.html
@@ -22,10 +22,25 @@
             <li class="center">
                 <a href="/a/user" class="menuItem" title="User"><i class="fa fa-user"></i></a>
             </li>
-            <li class="center">
-                <a href="/a/settings" class="menuItem" title="Settings"><i class="fa fa-cog"></i></a>
+
+			<li class="center">
+                <a href="/a/yeast" class="menuItem" title="Yeast"><i class="fa fa-book"></i></a>
             </li>
-            <li class="center">
+			<li class="center">
+                <a href="/a/notes" class="menuItem" title="Notes"><i class="fa fa-pencil"></i></a>
+            </li>
+			<li class="center">
+                <a href="/a/calendar" class="menuItem" title="Calendar"><i class="fa fa-calendar"></i></a>
+            </li>
+            
+			<li class="center">
+				<a href="/a/mash_performance" class="menuItem" title="Settings"><i class="fa fa-bar-chart"></i></a>
+			</li>
+			
+			<li class="center">
+				<a href="/a/settings" class="menuItem" title="Settings"><i class="fa fa-cog"></i></a>
+			</li>
+			<li class="center">
                 <a href="/" class="menuItem" title="Log out"><i class="fa fa-sign-out "></i></a>
             </li>
         </ul>
