--- a/client/batch.html
+++ b/client/batch.html
@@ -1,9 +1,9 @@
-<template name="user">
+<template name="batch">
     <div class="full-wh">
         {{> AdminNavigation}}
         <div class="container full-wh main-content" style="float: right;">
-            <h1>User page</h1>
-            <p> </p>
+            <h1>Batch handling</h1>
+            <p>Choose batch to brew, and adjust the amount</p>
         </div>
     </div>
 </template>
