--- a/client/calendar.html
+++ b/client/calendar.html
@@ -1,8 +1,8 @@
-<template name="user">
+<template name="calendar">
     <div class="full-wh">
         {{> AdminNavigation}}
         <div class="container full-wh main-content" style="float: right;">
-            <h1>User page</h1>
+            <h1>Brew calendar</h1>
             <p> </p>
         </div>
     </div>
