--- a/client/instructions.html
+++ b/client/instructions.html
@@ -1,8 +1,8 @@
-<template name="user">
+<template name="instructions">
     <div class="full-wh">
         {{> AdminNavigation}}
         <div class="container full-wh main-content" style="float: right;">
-            <h1>User page</h1>
+            <h1>How to use this site</h1>
             <p> </p>
         </div>
     </div>
