--- a/client/mod.html
+++ b/client/mod.html
@@ -1,9 +1,9 @@
-<template name="user">
+<template name="mod">
     <div class="full-wh">
         {{> AdminNavigation}}
         <div class="container full-wh main-content" style="float: right;">
-            <h1>User page</h1>
-            <p> </p>
+            <h1>MOD page</h1>
+            <p>Someting and something else</p>
         </div>
     </div>
 </template>
